<!--
  ~ Copyright (c) 2018 by siggel <siggel-apps@gmx.de>
  ~
  ~     This file is part of Coordinate Joker.
  ~
  ~     Coordinate Joker is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Coordinate Joker is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Coordinate Joker.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_app_name">Coordinate Joker</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_import">Import from Clipboard</string>
    <string name="title_activity_open_source_licenses">Open Source Licenses</string>
    <string-array name="stringarray_letters_latitude">
        <item>"N"</item>    <!-- first entry is considered north to become language independent -->
        <item>"S"</item>
    </string-array>
    <string-array name="stringarray_letters_longitude">
        <item>"E"</item>    <!-- first entry is considered east to become language independent -->
        <item>"W"</item>
    </string-array>
    <string-array name="stringarray_distance_units" tools:ignore="MissingTranslation">
        <item>"ft"</item>
        <item>"m"</item>
    </string-array>
    <string name="string_send">Send</string>
    <string name="string_x_values">x values: </string>
    <string name="string_y_values">y values: </string>
    <string name="string_checkbox_minutes_replacement">Replace minutes mm.mmm with mm + (mmm)/1000.0</string>
    <string name="htmlstring_checkbox_explanation_link"><![CDATA[An explanation for the above selection is given <a href="coordinatejoker_checkbox_explanation://">here</a>.]]></string>
    <string name="string_projection">Select unit \"m\" or \"ft\", leave distance \"0\" if you don\'t need a projection:</string>
    <string name="string_distance">Distance: </string>
    <string name="string_azimuth">Azimuth: </string>
    <string name="htmlstring_intro"><![CDATA[Enter formulas with x, y being unknown, e.g. "12.(3+x)4y" or <a href="coordinatejoker_import://">import</a> from clipboard.]]></string>
    <string name="string_reset">Reset</string>
    <string name="string_formula_error">Could not solve formulas. Please check them for errors.</string>
    <string name="string_gpx_export_failed">Saving gpx failed.</string>
    <string name="string_kml_export_failed">Saving kml failed.</string>
    <string name="string_kmz_export_failed">Saving kmz failed.</string>
    <string name="string_exporter_missing">No implementation found for export to format</string>
    <string name="string_sending_intent_failed">Failed sending the waypoints to another app for displaying them.</string>
    <string name="string_empty_waypoints">Sorry, the calculation did not result in any valid coordinates.</string>
    <string name="string_some_invalid_waypoints">Some x or y that did not result in valid coordinates have been omitted.</string>
    <string name="title_activity_terms_of_service">Terms of Service</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_acknowledgements">Acknowledgements</string>
    <string name="title_activity_about">About</string>
    <string name="string_view">View</string>
    <string name="string_file_operation_failed">File operation during export failed.</string>
    <string name="string_html_page_language_id">en</string>
    <string name="string_too_many_points">Please limit the value ranges to a maximum of 100 points.</string>
    <string name="title_activity_intro">First Steps</string>
    <string name="string_intro_button_next" tools:ignore="MissingTranslation"><![CDATA[>]]></string>
    <string name="string_intro_button_skip">Skip</string>
    <string name="htmlstring_intro_have_locus"><![CDATA[Currently Coordinate Joker is configured for use with Locus Map.<br><br>Time for a short intro …]]></string>
    <string name="htmlstring_intro_no_locus"><![CDATA[Currently Coordinate Joker is not configured for use with Locus Map, so we describe use with c:geo as another app example. Expert settings offer a variety of further scenarios.<br><br>Time for a short intro …]]></string>
    <string name="string_intro_button_previous" tools:ignore="MissingTranslation"><![CDATA[<]]></string>
    <string name="htmlstring_intro_enter_formulas_and_view">On the main screen enter the coordinate formulas with x, y being the unknown variables. Define which x and y values shall be tried, then hit the \'Show\'-button for displaying the points.</string>
    <string name="string_intro_button_ok">OK</string>
    <string name="htmlstring_intro_select_app_for_send_gpx">If Coordinate Joker is configured for use with c:geo but does not find it, you will need to select an alternative app manually when Android asks you.</string>
    <string name="htmlstring_intro_locus_import">Locus will ask you where to import the waypoints. Best create an own folder like \'joker\'. Thus you can easily hide or clear all points at once instead of doing it for each point individually.</string>
    <string name="htmlstring_intro_other_apps_import">If you use c:geo you will be asked where to import the waypoints. Best create an own folder like \'joker\'. Thus you can easily hide or clear all points at once instead of doing it for each point individually.</string>
    <string name="htmlstring_intro_locus_shows_points"><![CDATA[Locus will show the points on the map, so you may determine, which are worth a visit.<br><br><b>Good luck!</b><br>]]></string>
    <string name="htmlstring_intro_other_app_shows_points"><![CDATA[You can then display the points on the map, so you may determine, which are worth a visit.<br><br><b>Good luck!</b><br>]]></string>
    <string name="string_screenshot">Screenshot</string>
    <string name="string_parse_error_negative_number">Negative numbers are not supported in the value range definition.</string>
    <string name="string_parse_error_from_bigger_than_to">\'From\' must be smaller than \'to\' in the value range definition.</string>
    <string name="string_parse_error_negative_step_size">Negative step sizes are not supported in the value range definition.</string>
    <string name="string_parse_error_non_integer">Please fix the value range definition.</string>
    <string name="title_activity_change_history">Change history</string>
    <string name="htmlstring_no_change_history_found">No change history found.</string>
    <string name="string_range" tools:ignore="TypographyDashes">Enter range like \"1-5#2,7-9,20\" (\"#2\" means step size 2) or leave empty:</string>
    <string name="string_import_explanation">Adjust the input to match the following format: N …° …\' E …° …\' …m …° TN (or ft instead of m, you may omit the projection part). You may use line breaks instead of °, \'. Finally replace the unknown variables by x (and y).</string>
    <string name="string_import_result_explanation">Result:</string>
    <string name="string_use">Use result</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_replacement_info">with variable replacement</string>
    <string name="string_no_replacement_info">Automatic variable replacement by x, y did not succeed. Please adjust them manually above.</string>
    <string name="string_error_big_clipboard">The clipboard contained too much data to be processed. Please copy just the formula to the clipboard.</string>
    <string name="string_error_clipboard_failed">Pasting from the clipboard did not succeed. You may try to insert it here manually.</string>
    <string name="string_import_projection">Proj.</string>
    <string name="string_x_used_for_multiplication">x as multiplication sign</string>
    <string name="string_error_parsing_failed">The input could not be analysed.</string>
    <string name="title_activity_checkbox_explanation">Explanation</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
</resources>
