<!--
  ~ Copyright (c) 2018-2025 by siggel <siggel-apps@gmx.de>
  ~
  ~     This file is part of Coordinate Joker.
  ~
  ~     Coordinate Joker is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Coordinate Joker is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Coordinate Joker.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.siggel.coordinatejoker.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/title_activity_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_intro"
        android:orderInCategory="300"
        android:title="@string/title_activity_intro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_history"
        android:orderInCategory="400"
        android:title="@string/title_activity_change_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="500"
        android:title="@string/title_activity_help"
        app:showAsAction="never" />
</menu>
