<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 by siggel <siggel-apps@gmx.de>
  ~
  ~     This file is part of Coordinate Joker.
  ~
  ~     Coordinate Joker is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Coordinate Joker is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Coordinate Joker.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:http="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp">

    <Button
        android:id="@+id/introNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="next"
        android:tag="1"
        android:text="@string/string_intro_button_next" />

    <Button
        android:id="@+id/introPreviousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/introNextButton"
        android:onClick="next"
        android:tag="-1"
        android:text="@string/string_intro_button_previous" />

    <Button
        android:id="@+id/introSkipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/introPreviousButton"
        android:onClick="skipIntro"
        android:text="@string/string_intro_button_skip" />

    <ImageView
        android:id="@+id/introImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/introNextButton"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/introTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/introImageView"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>