<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/string_app_icon"
                android:src="@raw/logo_192x192" />

            <TextView
                android:id="@+id/aboutTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="18sp" />

            <Button
                android:id="@+id/showTermsOfService"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5sp"
                android:onClick="openTermsOfService"
                android:padding="0sp"
                android:text="@string/title_activity_terms_of_service"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/showPrivacyPolicy"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5sp"
                android:onClick="openPrivacyPolicy"
                android:padding="0sp"
                android:text="@string/title_activity_privacy_policy"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/showOpenSourceLicenses"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5sp"
                android:onClick="openOpenSourceLicenses"
                android:padding="0sp"
                android:text="@string/title_activity_open_source_licenses"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>