<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 by siggel <siggel-apps@gmx.de>
  ~
  ~     This file is part of Coordinate Joker.
  ~
  ~     Coordinate Joker is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Coordinate Joker is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Coordinate Joker.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp">

    <Button
        android:id="@+id/useButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:drawablePadding="5sp"
        android:enabled="false"
        android:onClick="useResult"
        android:text="@string/string_use"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/useButton"
        android:drawablePadding="5sp"
        android:onClick="cancelImport"
        android:text="@string/string_cancel"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/useButton"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_import_explanation"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/clipboardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textMultiLine"
                android:maxLines="4"
                android:minEms="2"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="18sp"
                tools:ignore="Autofill,HardcodedText,LabelFor,RtlCompat" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/importNoPreprocessing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="*"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/importPreprocessDiagonalCross"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="×"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/importPreprocessLowerX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/string_x_used_for_multiplication" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_import_result_explanation"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:scrollbarStyle="outsideInset">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="3">

                    <TextView
                        android:id="@+id/importResultNorth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="18sp"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/importResultDegreesNorth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="18sp"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/importResultMinutesNorth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/importResultEast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="18sp"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/importResultDegreesEast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="18sp"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/importResultMinutesEast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/importResultProjectionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="18sp"
                        android:text="@string/string_import_projection"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/importResultDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="18sp"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/importResultAzimuth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </GridLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/importReplacementInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
